git_hub.html 수정

--- a/Proj-Web/src/main/webapp/git_hub.html
+++ b/Proj-Web/src/main/webapp/git_hub.html
@@ -2,11 +2,11 @@
 <html>
 <head>
 <meta charset="EUC-KR">
-<title>git/github 테스트</title>
+<title>git/github test</title>
 </head>
 <body>
 
-	<h1>테스트</h1>
+	<h1>git/github 사용해보기</h1>
 
 </body>
 </html>
